# web-learning

./: .eslintrc.js  .gitignore  .prettierignore  .prettierrc  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  clippy.toml  docusaurus.config.ts  package-lock.json  package.json  rustfmt.toml  sidebars.ts  tsconfig.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: deploy.yml
blog/: README.md
docs/cross-origin-security/: canvas-tainting.mdx  cross-origin-isolation.mdx  index.mdx  same-origin-cors.mdx  sharedarraybuffer.mdx
docs/debugging/: boundary-bugs.mdx  perf-pathologies.mdx  profiling-and-tracing.mdx  q-questions.mdx
docs/exercises/: pipeline-design-exercise.mdx  sdk-compress-exercise.mdx  wasm-oom-scenario.mdx
docs/overview/: index.mdx
docs/rubrics/: interviewer-rubric.mdx  quick-cheatsheet.mdx
docs/rust-wasm/: build-size.mdx  error-mapping.mdx  memory-and-limits.mdx  rayon-and-threads.mdx
docs/sdk-ts-wasm/: asset-loading.mdx  errors-and-cancellation.mdx  init-and-api-design.mdx  packaging.mdx
docs/workers-concurrency/: messageports-and-transferables.mdx  pipelines-and-backpressure.mdx  worker-pools.mdx
examples/: README.md  package-lock.json  package.json  tsconfig.json  types.d.ts
examples/cross-origin-security/: coop-coep-headers.example.js
examples/debugging/: wasm-js-boundary.example.ts
examples/rust-wasm/: Cargo.toml  lib.example.rs  parallel-processing.example.rs  wasm-node-runner.js  wasm-rayon-integration.example.rs  wasm-test-runner.js
examples/rust-wasm/src/: lib.rs
examples/typescript-sdk/: basic-initialization.example.ts
examples/workers-concurrency/: backpressure-patterns.example.ts  message-channel-basic.example.ts  transferable-objects.example.ts  worker-pipeline.example.ts  worker-pool.example.ts
src/components/: Callout.tsx  CodeBlock.tsx  Expected.tsx  Question.tsx
src/components/HomepageFeatures/: index.tsx
src/css/: custom.css
src/pages/: index.tsx
